--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,10 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
    <title>We R VR</title>
+
+   <script src="//cdn.auth0.com/js/lock-9.0.min.js"></script>
+   <script type="text/javascript" src="static/js/auth0-variables.js"></script>
+
    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
    <!-- We will use the Babel transpiler so that we can convert our jsx code to js on the fly -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
@@ -17,19 +21,6 @@
 
    <!-- We will import bootstrap so that we can build a good looking UI fast -->
    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
-   <!-- Compressed CSS -->
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.css">
-
-   <!-- Compressed JavaScript -->
-   <script src="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.js"></script>
-
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-
 </head>
 <body>
 <!-- This will be the entry point for our React app -->
